# espec_pr3j

./: .coverage  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  COPYING.LESSER  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.md
src/: __init__.py  climate_chamber.py  dicts.py  exceptions.py
src/climate_chamber/: __init__.py  climate_chamber.py  data_classes.py  exceptions.py
src/espec_pr3j/: espec_pr3j.py
tests/: climate_chamber_mocker.py  conftest.py  espec_pr3j_mocker.py  test_climate_chamber.py
