# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = climate_chamber
description = Climate chamber controller
author = Leandro Lanzieri
author_email = leandro.lanzieri@desy.de
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://gitlab.desy.de/leandro.lanzieri/climate_chamber

platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.7
install_requires =
    importlib-metadata; python_version<"3.8"
    pyudev


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pexpect
    pytest
    pytest-cov
    flaky
    pre-commit
    tox
all =
    inquirer

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.4.1
package = climate_chamber
extensions =
    github_actions
    markdown
    no_skeleton
    pre_commit
