# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = espec_pr3j
description = Espec PR-3J environmental chamber remote controller
author = Leandro Lanzieri
author_email = leandro.lanzieri@desy.de
license = MIT
license_files = COPYING.LESSER
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://gitlab.desy.de/leandro.lanzieri/espec_pr3j

platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.8
install_requires =
    pyvisa
    pyvisa-py

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pexpect
    pytest
    pytest-cov
    flaky
    pre-commit
    tox
all =
    inquirer

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.4.1
package = espec_pr3j
extensions =
    github_actions
    markdown
    no_skeleton
    pre_commit
